--- a/en/blogs.html
+++ b/en/blogs.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <title>Beauty Knowledge - Lumi Beauty | PMU Guide & Tips</title>
     <meta
         content="Beauty knowledge and PMU guides from Lumi Beauty: tips on lip blushing, brow PMU, aftercare, FAQs and beauty advice."
         name="description" />
     <meta content="pmu guide, lip blushing tips, brow pmu knowledge, aftercare guide, Lumi Beauty" name="keywords" />
     <meta content="#88c0c4" name="theme-color" />
-    <link href="https://lumibeauty.studio/en/blogs.html" rel="canonical" />
-    <link href="https://lumibeauty.studio/vi/blogs.html" hreflang="vi" rel="alternate" />
-    <link href="https://lumibeauty.studio/en/blogs.html" hreflang="en" rel="alternate" />
-    <link href="https://lumibeauty.studio/ko/blogs.html" hreflang="ko" rel="alternate" />
-    <link href="https://lumibeauty.studio/vi/blogs.html" hreflang="x-default" rel="alternate" />
+    <link href="https://moinam.lumibeauty.studio/en/blogs.html" rel="canonical" />
+    <link href="https://moinam.lumibeauty.studio/vi/blogs.html" hreflang="vi" rel="alternate" />
+    <link href="https://moinam.lumibeauty.studio/en/blogs.html" hreflang="en" rel="alternate" />
+    <link href="https://moinam.lumibeauty.studio/ko/blogs.html" hreflang="ko" rel="alternate" />
+    <link href="https://moinam.lumibeauty.studio/vi/blogs.html" hreflang="x-default" rel="alternate" />
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
     <link href="/manifest.webmanifest" rel="manifest" />
@@ -23,24 +24,24 @@
     <meta
         content="Beauty knowledge and PMU guides from Lumi Beauty: tips on lip blushing, brow PMU, aftercare, FAQs and beauty advice."
         property="og:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
     <meta content="1200" property="og:image:width" />
     <meta content="630" property="og:image:height" />
-    <meta content="https://lumibeauty.studio/en/blogs.html" property="og:url" />
+    <meta content="https://moinam.lumibeauty.studio/en/blogs.html" property="og:url" />
     <meta content="Lumi Beauty" property="og:site_name" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="Beauty Knowledge - Lumi Beauty" name="twitter:title" />
     <meta
         content="Beauty knowledge and PMU guides from Lumi Beauty: tips on lip blushing, brow PMU, aftercare, FAQs and beauty advice."
         name="twitter:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link href="../styles.css" rel="stylesheet" />
 </head>
