--- a/en/contact.html
+++ b/en/contact.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <title>Contact - Lumi Beauty | Permanent Makeup Da Nang</title>
     <meta
         content="Contact Lumi Beauty Da Nang - Expert permanent makeup for brows, lips, and eyeliner. Hotline: 0364759261. Address: Vo Quy Huan, FPT City Urban Area, Da Nang."
@@ -12,36 +13,36 @@
     <meta content="contact lumi beauty, pmu da nang, lumi beauty da nang, permanent makeup address, pmu studio da nang"
         name="keywords" />
     <meta content="#88c0c4" name="theme-color" />
-    <link href="https://lumibeauty.studio/en/contact.html" id="canonicalLink" rel="canonical" />
-    <link data-hreflang="vi" href="https://lumibeauty.studio/vi/contact.html" hreflang="vi" rel="alternate" />
-    <link data-hreflang="en" href="https://lumibeauty.studio/en/contact.html" hreflang="en" rel="alternate" />
-    <link data-hreflang="ko" href="https://lumibeauty.studio/ko/contact.html" hreflang="ko" rel="alternate" />
-    <link data-hreflang="x-default" href="https://lumibeauty.studio/vi/contact.html" hreflang="x-default"
+    <link href="https://moinam.lumibeauty.studio/en/contact.html" id="canonicalLink" rel="canonical" />
+    <link data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/contact.html" hreflang="vi" rel="alternate" />
+    <link data-hreflang="en" href="https://moinam.lumibeauty.studio/en/contact.html" hreflang="en" rel="alternate" />
+    <link data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/contact.html" hreflang="ko" rel="alternate" />
+    <link data-hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/contact.html" hreflang="x-default"
         rel="alternate" />
     <meta content="website" property="og:type" />
     <meta content="Contact - Lumi Beauty | Permanent Makeup Da Nang" property="og:title" />
     <meta
         content="Contact Lumi Beauty Da Nang - Expert permanent makeup for brows, lips, and eyeliner. Hotline: 0364759261. Address: Vo Quy Huan, FPT City Urban Area, Da Nang."
         property="og:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
-    <meta content="https://lumibeauty.studio/en/contact.html" property="og:url" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
+    <meta content="https://moinam.lumibeauty.studio/en/contact.html" property="og:url" />
     <meta content="Lumi Beauty" property="og:site_name" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="Contact - Lumi Beauty | Permanent Makeup Da Nang" name="twitter:title" />
     <meta
         content="Contact Lumi Beauty Da Nang - Expert permanent makeup for brows, lips, and eyeliner. Hotline: 0364759261."
         name="twitter:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
     <link href="/manifest.webmanifest" rel="manifest" />
     <!-- Google tag (gtag.js) -->
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link href="../styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -91,9 +92,9 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Lumi Beauty",
-      "image": "https://lumibeauty.studio/images/lumi-preview-image.jpg",
-      "@id": "https://lumibeauty.studio",
-      "url": "https://lumibeauty.studio",
+      "image": "https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg",
+      "@id": "https://moinam.lumibeauty.studio",
+      "url": "https://moinam.lumibeauty.studio",
       "telephone": "0364759261",
       "priceRange": "$$",
       "address": {
