--- a/en/index.html
+++ b/en/index.html
@@ -4,16 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
   <meta name="author" content="Lumi Beauty Team">
+  <title>Lip Neutralizing for Men in Da Nang – Natural – Painless – Fast Recovery | Lumi Beauty</title>
+  <meta name="description"
+    content="Lumi Beauty specializes in men's lip neutralizing in Da Nang. Private 1-1 procedure, painless, no swelling, maintains absolute masculine appearance. Results after 3 days.">
+  <meta name="keywords"
+    content="men's lip neutralizing, lip tattoo for men da nang, lumi beauty, painless lip neutralizing">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://lumibeauty.studio/en/">
+  <link rel="canonical" href="https://moinam.lumibeauty.studio/en/">
 
   <!-- Hreflang tags for multi-language support -->
-  <link rel="alternate" hreflang="vi" href="https://lumibeauty.studio/vi/">
-  <link rel="alternate" hreflang="en" href="https://lumibeauty.studio/en/">
-  <link rel="alternate" hreflang="ko" href="https://lumibeauty.studio/ko/">
-  <link rel="alternate" hreflang="x-default" href="https://lumibeauty.studio/vi/">
+  <link rel="alternate" hreflang="vi" href="https://moinam.lumibeauty.studio/vi/">
+  <link rel="alternate" hreflang="en" href="https://moinam.lumibeauty.studio/en/">
+  <link rel="alternate" hreflang="ko" href="https://moinam.lumibeauty.studio/ko/">
+  <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/">
 
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -22,32 +28,34 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://lumibeauty.studio/en/">
+  <meta property="og:url" content="https://moinam.lumibeauty.studio/en/">
   <meta property="og:title"
     content="Lip Neutralizing for Men in Da Nang – Natural – Painless – Fast Recovery | Lumi Beauty">
   <meta property="og:description"
     content="Solution for men's dark lips in Da Nang. Painless, no shine, no redness, maintains absolute masculine appearance. Results after 3 days.">
-  <meta property="og:image" content="https://lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-en.jpg">
+  <meta property="og:image"
+    content="https://moinam.lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-en.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="Lumi Beauty">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://lumibeauty.studio/en/">
+  <meta name="twitter:url" content="https://moinam.lumibeauty.studio/en/">
   <meta name="twitter:title" content="Lip Neutralizing for Men in Da Nang – Natural – Painless | Lumi Beauty">
   <meta name="twitter:description"
     content="Solution for men's dark lips in Da Nang. Painless, no shine, maintains masculine appearance. Results after 3 days.">
   <meta name="twitter:image"
-    content="https://lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-en.jpg">
+    content="https://moinam.lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-en.jpg">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-SYDWGCR68B');
+
+    gtag('config', 'G-61GYBJ33R0');
   </script>
   <!-- Structured Data for Site Navigation -->
   <script type="application/ld+json">
@@ -55,42 +63,27 @@
     "@context": "https://schema.org",
     "@type": "SiteNavigationElement",
     "name": "Main Navigation",
-    "url": "https://lumibeauty.studio/en/",
+    "url": "https://moinam.lumibeauty.studio/en/",
     "hasPart": [
     {
     "@type": "SiteNavigationElement",
-    "name": "Collagen Lip Blushing",
-    "url": "https://lumibeauty.studio/en/services/phun-moi-collagen.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "Shading Ombre Brows",
-    "url": "https://lumibeauty.studio/en/services/phun-may-shading.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "Lip Neutralizing for Men & Women",
-    "url": "https://lumibeauty.studio/en/services/khu-tham-moi-nam-nu.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "Lashline Enhancement",
-    "url": "https://lumibeauty.studio/en/services/eyeliner-tattoo.html"
+    "name": "Pricing",
+    "url": "https://moinam.lumibeauty.studio/en/pricing.html"
     },
     {
     "@type": "SiteNavigationElement",
     "name": "Gallery",
-    "url": "https://lumibeauty.studio/en/gallery.html"
+    "url": "https://moinam.lumibeauty.studio/en/gallery.html"
     },
     {
     "@type": "SiteNavigationElement",
-    "name": "Client Feedback",
-    "url": "https://lumibeauty.studio/en/feedback.html"
+    "name": "Knowledge",
+    "url": "https://moinam.lumibeauty.studio/en/blogs.html"
     },
     {
     "@type": "SiteNavigationElement",
     "name": "Contact",
-    "url": "https://lumibeauty.studio/en/contact.html"
+    "url": "https://moinam.lumibeauty.studio/en/contact.html"
     }
     ]
     }
@@ -441,14 +434,13 @@
         </div>
         <div class="hero-right">
           <div class="main-image">
-            <video class="hero-video" muted playsinline loop preload="none"
-              poster="../images/services/dich-vu-phun-moi.jpg">
+            <video class="hero-video" muted playsinline loop preload="none" poster="../videos/hero-video-thumbnail.png">
               <source src="../videos/hero_video.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
-            <span class="hero-badge hero-badge--top">NO RED SHINE</span>
+            <!-- <span class="hero-badge hero-badge--top">NO RED SHINE</span>
             <span class="hero-badge hero-badge--middle">NO SWELLING</span>
-            <span class="hero-badge hero-badge--bottom">FAST RECOVERY</span>
+            <span class="hero-badge hero-badge--bottom">FAST RECOVERY</span> -->
           </div>
         </div>
       </div>
@@ -458,15 +450,15 @@
           <span class="stat-label">years of experience</span>
         </div>
         <div class="stat-item">
-          <span class="stat-number">400+</span>
+          <span class="stat-number">1000+</span>
           <span class="stat-label">potential customers</span>
         </div>
         <div class="stat-item">
-          <span class="stat-number">260+</span>
+          <span class="stat-number">430+</span>
           <span class="stat-label">5-star client reviews</span>
         </div>
         <div class="stat-item">
-          <span class="stat-number">4</span>
+          <span class="stat-number">6</span>
           <span class="stat-label">professional certifications</span>
         </div>
       </div>
@@ -483,7 +475,7 @@
       </p>
 
 
-      <img src="../images/blogs/blog-2/blog-2-hero-moi-tham.jpg" alt="Men's lip neutralizing before and after"
+      <img src="../images/blogs/blog-2/blog-2-hero-moi-tham-en.jpg" alt="Men's lip neutralizing before and after"
         style="width: 100%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
         loading="lazy" decoding="async">
 
@@ -928,7 +920,7 @@
         </ul>
       </div>
       <img src="../images/blogs/blog-2/khu-tham-moi-sau-3-ngay.jpg" alt="Lips after 3 days"
-        style="width: 100%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+        style="width: 40%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
         loading="lazy" decoding="async">
 
       <h2 id="pricing">Pricing & Offers</h2>
@@ -1130,22 +1122,7 @@
             natural. Technique is completely different from women's lip tattooing.</p>
           <a href="/en/blogs/blog-khu-tham-moi-nam-co-bi-do-nhu-nu.html" class="read-more">Read more</a>
         </article>
-        <article class="blog-card">
-          <img src="../images/blogs/blog-2/blog-2-hero-moi-tham.jpg" alt="Men's lip neutralizing in Da Nang"
-            loading="lazy" decoding="async">
-          <h3>Lip Neutralizing for Men in Da Nang – Natural – Painless – Fast Recovery</h3>
-          <p>Solution that helps lips lose darkness after just 1 treatment session. No shine, no redness,
-            maintains absolute masculine appearance. Safe, natural lip neutralizing at Lumi Beauty.</p>
-          <a href="/en/blogs/blog-khu-tham-moi-cho-nam.html" class="read-more">Read more</a>
-        </article>
-        <article class="blog-card">
-          <img src="../images/services/phun-moi/hinh-truoc-sau/z7235003539268_609359d6a94d99729f6498b07706d233.jpg"
-            alt="Uneven lip color after PMU" loading="lazy" decoding="async">
-          <h3>Lips Peeling Dull, Uneven Color After PMU – Normal or Problematic?</h3>
-          <p>Lips peeling dull, slightly dark, color bleeding after PMU - is it dangerous? Lumi Beauty explains
-            in detail the causes, peeling stages and when lips truly develop beautiful color.</p>
-          <a href="/en/blogs/blog-moi-bong-khong-deu-mau.html" class="read-more">Read answer</a>
-        </article>
+
       </div>
     </div>
   </section>
