--- a/en/pricing.html
+++ b/en/pricing.html
@@ -4,40 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <title>Pricing - Lumi Beauty | Permanent Makeup Da Nang</title>
     <meta name="description"
         content="Men's lip neutralizing pricing at Lumi Beauty Da Nang. Prices from 1,200,000 VND - 2,000,000 VND. Online discount 20%. Private 1-1, painless, no swelling.">
     <meta name="keywords"
         content="lip neutralizing pricing, men's lip tattoo price, lumi beauty da nang, permanent makeup pricing da nang">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/en/pricing.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/pricing.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/pricing.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/pricing.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/en/pricing.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/pricing.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/pricing.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/pricing.html">
     <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
-        href="https://lumibeauty.studio/vi/pricing.html">
+        href="https://moinam.lumibeauty.studio/vi/pricing.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pricing - Lumi Beauty | Permanent Makeup Da Nang">
     <meta property="og:description"
         content="Men's lip neutralizing pricing at Lumi Beauty Da Nang. Prices from 1,200,000 VND - 2,000,000 VND. Online discount 20%.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/en/pricing.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/en/pricing.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Pricing - Lumi Beauty | Permanent Makeup Da Nang">
     <meta name="twitter:description"
         content="Men's lip neutralizing pricing at Lumi Beauty Da Nang. Online discount 20%.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
