--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <meta name="facebook-domain-verification" content="gzfx5mrx5ieyutmkrp2qsvqd2cwmxp" />
     <meta http-equiv="refresh" content="0; url=/vi/" />
-    <title>Lumi Beauty - Phun Xăm Thẩm Mỹ Đẹp Tự Nhiên Tại Đà Nẵng</title>
+    <title>Khử Thâm Môi Nam Tại Đà Nẵng – Tự Nhiên – Không Đau | Lumi Beauty</title>
     <meta name="description"
-        content="Lumi Beauty Da Nang chuyên phun xăm thẩm mỹ mày, môi, mí chuẩn y khoa, không đau rát và hỗ trợ chăm sóc tận tâm.">
-    <meta name="keywords" content="phun xăm thẩm mỹ Đà Nẵng, phun môi, phun mày, Lumi Beauty">
+        content="Lumi Beauty chuyên khử thâm môi nam tại Đà Nẵng. Quy trình 1-1 riêng tư, không đau, không sưng, giữ vẻ nam tính tuyệt đối. Kết quả sau 3 ngày.">
+    <meta name="keywords" content="khử thâm môi nam, phun môi nam đà nẵng, lumi beauty, khử thâm môi không đau, làm sáng môi nam">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" href="https://lumibeauty.studio/vi/" />
-    <link rel="alternate" hreflang="vi" href="https://lumibeauty.studio/vi/" />
-    <link rel="alternate" hreflang="en" href="https://lumibeauty.studio/en/" />
-    <link rel="alternate" hreflang="ko" href="https://lumibeauty.studio/ko/" />
-    <link rel="alternate" hreflang="x-default" href="https://lumibeauty.studio/vi/" />
+    <link rel="canonical" href="https://moinam.lumibeauty.studio/vi/" />
+    <link rel="alternate" hreflang="vi" href="https://moinam.lumibeauty.studio/vi/" />
+    <link rel="alternate" hreflang="en" href="https://moinam.lumibeauty.studio/en/" />
+    <link rel="alternate" hreflang="ko" href="https://moinam.lumibeauty.studio/ko/" />
+    <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
@@ -141,9 +142,9 @@
             <div class="spinner"></div>
             <div class="logo-text">Lumi</div>
         </div>
-        <h1>Đang chuyển hướng...</h1>
-        <p>Chúng tôi đang đưa bạn đến trang chủ của Lumi Beauty.</p>
-        <a href="/vi/" class="redirect-link">Đi tới trang chủ</a>
+        <h1>Khử Thâm Môi Nam Tại Đà Nẵng</h1>
+        <p>Lumi Beauty chuyên khử thâm môi nam - Quy trình 1-1 riêng tư, không đau, giữ vẻ nam tính tuyệt đối.</p>
+        <a href="/vi/" class="redirect-link">Xem dịch vụ ngay</a>
     </div>
 
     <script>
