--- a/ko/index.html
+++ b/ko/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <meta name="author" content="Lumi Beauty Team">
+    <title>다낭 남성 립 뉴트럴라이징 – 자연스러움 – 무통증 – 빠른 회복 | 루미 뷰티</title>
+    <meta name="description" content="루미 뷰티 다낭 남성 립 뉴트럴라이징 전문. 프라이빗 1:1 절차, 무통증, 붓기 없음, 완벽한 남성스러움 유지. 3일 후 결과.">
+    <meta name="keywords" content="남성 립 뉴트럴라이징, 다낭 남성 립 문신, 루미 뷰티, 무통증 립 뉴트럴라이징">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://lumibeauty.studio/ko/">
+    <link rel="canonical" href="https://moinam.lumibeauty.studio/ko/">
 
     <!-- Hreflang tags for multi-language support -->
-    <link rel="alternate" hreflang="vi" href="https://lumibeauty.studio/vi/">
-    <link rel="alternate" hreflang="en" href="https://lumibeauty.studio/en/">
-    <link rel="alternate" hreflang="ko" href="https://lumibeauty.studio/ko/">
-    <link rel="alternate" hreflang="x-default" href="https://lumibeauty.studio/vi/">
+    <link rel="alternate" hreflang="vi" href="https://moinam.lumibeauty.studio/vi/">
+    <link rel="alternate" hreflang="en" href="https://moinam.lumibeauty.studio/en/">
+    <link rel="alternate" hreflang="ko" href="https://moinam.lumibeauty.studio/ko/">
+    <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/">
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -22,30 +26,30 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/">
     <meta property="og:title" content="다낭 남성 립 뉴트럴라이징 – 자연스러움 – 무통증 – 빠른 회복 | 루미 뷰티">
     <meta property="og:description" content="다낭 남성 어두운 입술 해결책. 무통증, 반짝임 없음, 붉은색 없음, 완벽한 남성스러움 유지. 3일 후 결과.">
     <meta property="og:image"
-        content="https://lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-ko.jpg">
+        content="https://moinam.lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-ko.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Lumi Beauty">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://lumibeauty.studio/ko/">
+    <meta name="twitter:url" content="https://moinam.lumibeauty.studio/ko/">
     <meta name="twitter:title" content="다낭 남성 립 뉴트럴라이징 – 자연스러움 – 무통증 | 루미 뷰티">
     <meta name="twitter:description" content="다낭 남성 어두운 입술 해결책. 무통증, 반짝임 없음, 남성스러움 유지. 3일 후 결과.">
     <meta name="twitter:image"
-        content="https://lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-ko.jpg">
+        content="https://moinam.lumibeauty.studio/images/blogs/blog-2/blog-2-hero-moi-tham-preview-ko.jpg">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <!-- Structured Data for Site Navigation -->
     <script type="application/ld+json">
@@ -53,42 +57,27 @@
     "@context": "https://schema.org",
     "@type": "SiteNavigationElement",
     "name": "Main Navigation",
-    "url": "https://lumibeauty.studio/ko/",
+    "url": "https://moinam.lumibeauty.studio/ko/",
     "hasPart": [
     {
     "@type": "SiteNavigationElement",
-    "name": "콜라겐 립 블러싱",
-    "url": "https://lumibeauty.studio/ko/services/phun-moi-collagen.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "쉐이딩 옴브레 브로우",
-    "url": "https://lumibeauty.studio/ko/services/phun-may-shading.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "남녀 립 뉴트럴라이징",
-    "url": "https://lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html"
-    },
-    {
-    "@type": "SiteNavigationElement",
-    "name": "래쉬라인 인핸스먼트",
-    "url": "https://lumibeauty.studio/ko/services/eyeliner-tattoo.html"
+    "name": "가격",
+    "url": "https://moinam.lumibeauty.studio/ko/pricing.html"
     },
     {
     "@type": "SiteNavigationElement",
     "name": "갤러리",
-    "url": "https://lumibeauty.studio/ko/gallery.html"
+    "url": "https://moinam.lumibeauty.studio/ko/gallery.html"
     },
     {
     "@type": "SiteNavigationElement",
-    "name": "고객 후기",
-    "url": "https://lumibeauty.studio/ko/feedback.html"
+    "name": "지식",
+    "url": "https://moinam.lumibeauty.studio/ko/blogs.html"
     },
     {
     "@type": "SiteNavigationElement",
     "name": "문의하기",
-    "url": "https://lumibeauty.studio/ko/contact.html"
+    "url": "https://moinam.lumibeauty.studio/ko/contact.html"
     }
     ]
     }
@@ -438,13 +427,13 @@
                 <div class="hero-right">
                     <div class="main-image">
                         <video class="hero-video" muted playsinline loop preload="none"
-                            poster="../images/services/dich-vu-phun-moi.jpg">
+                            poster=".../videos/hero-video-thumbnail.png">
                             <source src="../videos/hero_video.mp4" type="video/mp4">
                             브라우저가 비디오를 지원하지 않습니다.
                         </video>
-                        <span class="hero-badge hero-badge--top">붉은 반짝임 없음</span>
+                        <!-- <span class="hero-badge hero-badge--top">붉은 반짝임 없음</span>
                         <span class="hero-badge hero-badge--middle">붓기 없음</span>
-                        <span class="hero-badge hero-badge--bottom">빠른 회복</span>
+                        <span class="hero-badge hero-badge--bottom">빠른 회복</span> -->
                     </div>
                 </div>
             </div>
@@ -454,15 +443,15 @@
                     <span class="stat-label">년 경력</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">400+</span>
+                    <span class="stat-number">1000+</span>
                     <span class="stat-label">잠재 고객</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">260+</span>
+                    <span class="stat-number">420+</span>
                     <span class="stat-label">5성급 고객 후기</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">4</span>
+                    <span class="stat-number">6</span>
                     <span class="stat-label">전문 자격증 보유</span>
                 </div>
             </div>
@@ -479,7 +468,7 @@
             </p>
 
 
-            <img src="../images/blogs/blog-2/blog-2-hero-moi-tham.jpg" alt="남성 립 뉴트럴라이징 전후"
+            <img src="../images/blogs/blog-2/blog-2-hero-moi-tham-ko.jpg" alt="남성 립 뉴트럴라이징 전후"
                 style="width: 100%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
                 loading="lazy" decoding="async">
 
@@ -915,7 +904,7 @@
                 </ul>
             </div>
             <img src="../images/blogs/blog-2/khu-tham-moi-sau-3-ngay.jpg" alt="3일 후 입술"
-                style="width: 100%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
+                style="width: 40%; max-width: 800px; margin: 2em auto; display: block; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
                 loading="lazy" decoding="async">
 
             <h2 id="pricing">가격 & 혜택</h2>
@@ -1116,22 +1105,7 @@
                         자연스러움. 여성 립 문신과 완전히 다른 기술입니다.</p>
                     <a href="/ko/blogs/blog-khu-tham-moi-nam-co-bi-do-nhu-nu.html" class="read-more">더 읽기</a>
                 </article>
-                <article class="blog-card">
-                    <img src="../images/blogs/blog-2/blog-2-hero-moi-tham.jpg" alt="다낭 남성 립 뉴트럴라이징" loading="lazy"
-                        decoding="async">
-                    <h3>다낭 남성 립 뉴트럴라이징 – 자연스러움 – 무통증 – 빠른 회복</h3>
-                    <p>단 1회 시술 후 입술이 어두워짐을 해결하는 솔루션. 반짝임 없음, 붉은색 없음, 완벽한 남성스러움 유지.
-                        루미 뷰티에서 안전하고 자연스러운 립 뉴트럴라이징.</p>
-                    <a href="/ko/blogs/blog-khu-tham-moi-cho-nam.html" class="read-more">더 읽기</a>
-                </article>
-                <article class="blog-card">
-                    <img src="../images/services/phun-moi/hinh-truoc-sau/z7235003539268_609359d6a94d99729f6498b07706d233.jpg"
-                        alt="PMU 후 불균일한 입술 색상" loading="lazy" decoding="async">
-                    <h3>PMU 후 입술 각질이 칙칙하고 색상이 불균일 – 정상인가 문제인가?</h3>
-                    <p>PMU 후 입술 각질이 칙칙하고, 약간 어둡고, 색상이 번지는 것이 위험한가요? 루미 뷰티는 원인, 각질 단계 및
-                        입술이 진정으로 아름다운 색상을 발현하는 시기를 상세히 설명합니다.</p>
-                    <a href="/ko/blogs/blog-moi-bong-khong-deu-mau.html" class="read-more">답변 읽기</a>
-                </article>
+
             </div>
         </div>
     </section>
