--- a/ko/services/khu-tham-moi-nam-nu.html
+++ b/ko/services/khu-tham-moi-nam-nu.html
@@ -4,45 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>루미 뷰티 고급 립 브라이트닝 – 자연스러운 입술 색 되찾기</title>
     <meta name="description"
         content="루미 뷰티의 뉴트럴라이징 색소를 이용한 립 브라이트닝: 어두운 톤(블루·퍼플·그레이)을 따뜻하게 중화, 1회 시술로 30–60% 개선, 무통증·무붓기, 6–12개월 보증 포함.">
     <meta name="keywords"
         content="khử thâm môi, neutralizing pigment, làm ấm nền môi, khử thâm xanh tím, spa khử thâm môi đà nẵng">
     <meta name="theme-color" content="#f2c28a">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
     <link rel="alternate" hreflang="vi" data-hreflang="vi"
-        href="https://lumibeauty.studio/vi/services/khu-tham-moi-nam-nu.html">
+        href="https://moinam.lumibeauty.studio/vi/services/khu-tham-moi-nam-nu.html">
     <link rel="alternate" hreflang="en" data-hreflang="en"
-        href="https://lumibeauty.studio/en/services/khu-tham-moi-nam-nu.html">
+        href="https://moinam.lumibeauty.studio/en/services/khu-tham-moi-nam-nu.html">
     <link rel="alternate" hreflang="ko" data-hreflang="ko"
-        href="https://lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
+        href="https://moinam.lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
     <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
-        href="https://lumibeauty.studio/vi/services/khu-tham-moi-nam-nu.html">
+        href="https://moinam.lumibeauty.studio/vi/services/khu-tham-moi-nam-nu.html">
     <meta property="og:type" content="website">
-    <meta property="og:title"
-        content="루미 뷰티 고급 립 브라이트닝 – 자연스러운 입술 색 되찾기">
+    <meta property="og:title" content="루미 뷰티 고급 립 브라이트닝 – 자연스러운 입술 색 되찾기">
     <meta property="og:description"
         content="루미 뷰티의 뉴트럴라이징 색소를 이용한 립 브라이트닝: 어두운 톤(블루·퍼플·그레이)을 따뜻하게 중화, 1회 시술로 30–60% 개선, 무통증·무붓기, 6–12개월 보증 포함.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/services/khu-tham-moi-nam-nu.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title"
-        content="루미 뷰티 고급 립 브라이트닝 – 자연스러운 입술 색 되찾기">
+    <meta name="twitter:title" content="루미 뷰티 고급 립 브라이트닝 – 자연스러운 입술 색 되찾기">
     <meta name="twitter:description"
         content="루미 뷰티의 뉴트럴라이징 색소를 이용한 립 브라이트닝: 어두운 톤(블루·퍼플·그레이)을 따뜻하게 중화, 1회 시술로 30–60% 개선, 무통증·무붓기, 6–12개월 보증 포함.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
 </head>
 
 <body class="service-detail service-detail--lip-removal">
-        <!-- Header Placeholder -->
+    <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
 
     <main>
@@ -94,8 +94,7 @@
                             </li>
                         </ul>
                         <div class="service-hero-actions">
-                            <button class="btn btn-primary btn-large"
-                                data-action="open-booking">예약하기</button>
+                            <button class="btn btn-primary btn-large" data-action="open-booking">예약하기</button>
 
                             <a class="btn btn-outline btn-outline-arrow" href="https://zalo.me/84364759261"
                                 target="_blank" rel="noreferrer noopener">
@@ -220,10 +219,10 @@
                     </div>
                     <div class="why-choose-inner" style="margin-top: 48px; margin-bottom: 48px;">
                         <div class="why-choose-content">
-                            <h3 style="font-size: 28px; font-weight: 700; color: #163535; margin-bottom: 24px; line-height: 1.3;"
-                               >1:1 립 브라이트닝 – 7년 이상 전문가 케어</h3>
-                            <p style="font-size: 18px; line-height: 1.8; color: #4b5563; margin-bottom: 0;"
-                               >
+                            <h3
+                                style="font-size: 28px; font-weight: 700; color: #163535; margin-bottom: 24px; line-height: 1.3;">
+                                1:1 립 브라이트닝 – 7년 이상 전문가 케어</h3>
+                            <p style="font-size: 18px; line-height: 1.8; color: #4b5563; margin-bottom: 0;">
                                 루미 뷰티에서는 모든 고객이 7년 이상의 경험을 가진 전문가와 1:1 프라이빗 케어를 받습니다. 가장 전문적이고 안전하며 효과적인 서비스를 약속드립니다.
                             </p>
                         </div>
@@ -436,8 +435,7 @@
                             <li>4개월 보증 – 2차 뉴트럴라이징 무료</li>
                         </ul>
                         <div class="pricing-button">
-                            <button class="btn btn-primary btn-large"
-                                data-action="open-booking">무료 상담</button>
+                            <button class="btn btn-primary btn-large" data-action="open-booking">무료 상담</button>
                         </div>
                     </article>
                 </div>
@@ -576,8 +574,7 @@
                 </div>
                 <div class="aftercare-note"
                     style="padding: 32px; background: #e8f4f5; border-radius: 12px; border-left: 4px solid #f2c28a;">
-                    <h3
-                        style="margin-bottom: 20px; font-size: 20px;">피해야 할 것</h3>
+                    <h3 style="margin-bottom: 20px; font-size: 20px;">피해야 할 것</h3>
                     <ul class="benefits" style="list-style: none; padding: 0; margin: 0;">
                         <li style="margin-bottom: 12px;">
                             <span class="benefit-icon" aria-hidden="true"
@@ -672,20 +669,16 @@
                     style="padding: 48px; background: linear-gradient(135deg, #e8f4f5 0%, #e8f4f5 100%); border-radius: 16px; text-align: center;">
                     <h2 class="section-title">루미 뷰티 전문가의 조언</h2>
                     <div class="expert-content" style="max-width: 800px; margin: 0 auto;">
-                        <p
-                            style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
+                        <p style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
                             쿨톤 입술은 립 블러싱 전 뉴트럴라이징이 필수입니다. 이 단계를 생략하면 치유 후 색이 정확하지 않을 수 있습니다.
                         </p>
-                        <p
-                            style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
+                        <p style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
                             얕은 테크닉과 전문 색소로 통증과 붓기 없이 확실한 밝아짐을 얻을 수 있습니다. 이는 립 타투가 아니라 오직 색소 워밍입니다.
                         </p>
-                        <p
-                            style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
+                        <p style="font-size: 18px; line-height: 1.8; margin-bottom: 24px;">
                             베이스가 따뜻해지면 베이비립 블러싱이 더 선명하고 오래가며, 모든 고객에게 맞춤 플랜을 제공합니다.
                         </p>
-                        <p
-                            style="font-weight: 600; margin-top: 32px;">
+                        <p style="font-weight: 600; margin-top: 32px;">
                             — 루미 뷰티
                         </p>
                     </div>
@@ -710,8 +703,7 @@
                     </div>
                     <div class="cta-actions"
                         style="display: flex; gap: 16px; flex-wrap: wrap; justify-content: center;">
-                        <button class="btn btn-primary btn-large"
-                            data-action="open-booking">예약하기</button>
+                        <button class="btn btn-primary btn-large" data-action="open-booking">예약하기</button>
                         <a class="btn btn-outline btn-large" href="tel:0364759261">전화하기</a>
                         <a class="btn btn-outline btn-large" href="https://zalo.me/84364759261" target="_blank"
                             rel="noreferrer">Zalo 열기</a>
@@ -733,8 +725,7 @@
                                 <h3>전화하기</h3>
                             </div>
                             <p>탭하여 루미 뷰티와 즉시 연결</p>
-                            <a href="tel:0364759261" class="btn btn-primary btn-full"
-                               >지금 전화하기</a>
+                            <a href="tel:0364759261" class="btn btn-primary btn-full">지금 전화하기</a>
                         </article>
                         <article class="contact-card">
                             <div class="contact-card-header">
@@ -766,8 +757,7 @@
                                 <h3>이메일 보내기</h3>
                             </div>
                             <p>자세한 메시지를 남겨주세요 — 24시간 내에 답변드립니다</p>
-                            <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full"
-                               >이메일 보내기</a>
+                            <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full">이메일 보내기</a>
                         </article>
                     </div>
                 </div>
@@ -781,25 +771,22 @@
             <img src="../../icons/zalo.svg" alt="" aria-hidden="true">
         </a>
         <a href="https://www.facebook.com/lumibeautypmubrowlip" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="Facebook으로 채팅하기"
-           >
+            rel="noreferrer" aria-label="Facebook으로 채팅하기">
             <img src="../../icons/facebook.svg" alt="" aria-hidden="true">
         </a>
         <a href="https://www.tiktok.com/@lumibeautyphunxam" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="TikTok"
-           >
+            rel="noreferrer" aria-label="TikTok">
             <img src="../../icons/tiktok.svg" alt="" aria-hidden="true">
         </a>
     </div>
 
-        <!-- Footer Placeholder -->
+    <!-- Footer Placeholder -->
     <div id="footer-placeholder"></div>
 
     <div class="modal" id="bookingModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="bookingModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="bookingModalTitle">예약하기</h2>
                 <p>정보를 입력해 주세요. 곧 루미 뷰티에서 연락드립니다.</p>
@@ -808,13 +795,12 @@
                 <input type="hidden" name="form-name" value="booking-modal">
                 <div class="form-group">
                     <label for="bookingName">성함</label>
-                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required
-                       >
+                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required>
                 </div>
                 <div class="form-group">
                     <label for="bookingPhone">전화번호</label>
-                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832" required
-                       >
+                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832"
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="bookingService">관심 서비스</label>
@@ -832,8 +818,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bookingNotes">추가 메모</label>
-                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"
-                       ></textarea>
+                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"></textarea>
                 </div>
                 <div class="form-footer">
                     <button class="btn btn-primary btn-full" type="submit">요청
@@ -862,8 +847,7 @@
     <div class="modal" id="zaloContactModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="zaloModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="zaloModalTitle">직접 문의하기</h2>
                 <p data-zalo-service-desc>{service}에 관심이 있으시군요. 자세한 상담을 위해
@@ -873,8 +857,7 @@
                 <div style="margin-bottom: 32px;">
                     <img src="../../icons/zalo.svg" alt="Zalo"
                         style="width: 80px; height: 80px; margin: 0 auto 24px; display: block;">
-                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;"
-                       >Zalo 전화번호:</p>
+                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;">Zalo 전화번호:</p>
                     <p style="font-size: 24px; font-weight: 700; color: #0068ff; margin-bottom: 24px;">0364759261</p>
                 </div>
                 <div style="display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;">
