--- a/en/feedback.html
+++ b/en/feedback.html
@@ -5,39 +5,40 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
     <title>Client Feedback - Lumi Beauty | Permanent Makeup Da Nang</title>
     <meta content="Real feedback and reviews from Lumi Beauty Da Nang clients - PMU experiences and results."
         name="description" />
     <meta content="lumi beauty feedback, client reviews, pmu reviews da nang, lumi beauty da nang" name="keywords" />
     <meta content="#88c0c4" name="theme-color" />
-    <link href="https://lumibeauty.studio/en/feedback.html" id="canonicalLink" rel="canonical" />
-    <link data-hreflang="vi" href="https://lumibeauty.studio/vi/feedback.html" hreflang="vi" rel="alternate" />
-    <link data-hreflang="en" href="https://lumibeauty.studio/en/feedback.html" hreflang="en" rel="alternate" />
-    <link data-hreflang="ko" href="https://lumibeauty.studio/ko/feedback.html" hreflang="ko" rel="alternate" />
-    <link data-hreflang="x-default" href="https://lumibeauty.studio/vi/feedback.html" hreflang="x-default"
+    <link href="https://moinam.lumibeauty.studio/en/feedback.html" id="canonicalLink" rel="canonical" />
+    <link data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/feedback.html" hreflang="vi" rel="alternate" />
+    <link data-hreflang="en" href="https://moinam.lumibeauty.studio/en/feedback.html" hreflang="en" rel="alternate" />
+    <link data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/feedback.html" hreflang="ko" rel="alternate" />
+    <link data-hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/feedback.html" hreflang="x-default"
         rel="alternate" />
     <meta content="website" property="og:type" />
     <meta content="Client Feedback - Lumi Beauty" property="og:title" />
     <meta content="Real feedback and reviews from Lumi Beauty Da Nang clients - PMU experiences and results."
         property="og:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
-    <meta content="https://lumibeauty.studio/en/feedback.html" property="og:url" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" property="og:image" />
+    <meta content="https://moinam.lumibeauty.studio/en/feedback.html" property="og:url" />
     <meta content="Lumi Beauty" property="og:site_name" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="Client Feedback - Lumi Beauty" name="twitter:title" />
     <meta content="Real feedback and reviews from Lumi Beauty Da Nang clients - PMU experiences and results."
         name="twitter:description" />
-    <meta content="https://lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
+    <meta content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg" name="twitter:image" />
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
     <link href="/manifest.webmanifest" rel="manifest" />
     <!-- Google tag (gtag.js) -->
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link href="../styles.css" rel="stylesheet" />
 </head>
