--- a/ko/blogs.html
+++ b/ko/blogs.html
@@ -4,35 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>뷰티 지식 - 루미 뷰티 | PMU 가이드 & 팁</title>
     <meta name="description" content="루미 뷰티의 뷰티 지식과 PMU 가이드: 립 블러싱, 브로우 PMU, 사후 관리, 자주 묻는 질문 및 뷰티 조언에 대한 팁.">
     <meta name="keywords" content="PMU 가이드, 립 블러싱 팁, 브로우 PMU 지식, 사후 관리 가이드, 루미 뷰티">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" href="https://lumibeauty.studio/ko/blogs.html">
-    <link rel="alternate" hreflang="vi" href="https://lumibeauty.studio/vi/blogs.html">
-    <link rel="alternate" hreflang="en" href="https://lumibeauty.studio/en/blogs.html">
-    <link rel="alternate" hreflang="ko" href="https://lumibeauty.studio/ko/blogs.html">
-    <link rel="alternate" hreflang="x-default" href="https://lumibeauty.studio/vi/blogs.html">
+    <link rel="canonical" href="https://moinam.lumibeauty.studio/ko/blogs.html">
+    <link rel="alternate" hreflang="vi" href="https://moinam.lumibeauty.studio/vi/blogs.html">
+    <link rel="alternate" hreflang="en" href="https://moinam.lumibeauty.studio/en/blogs.html">
+    <link rel="alternate" hreflang="ko" href="https://moinam.lumibeauty.studio/ko/blogs.html">
+    <link rel="alternate" hreflang="x-default" href="https://moinam.lumibeauty.studio/vi/blogs.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <meta property="og:type" content="website">
     <meta property="og:title" content="뷰티 지식 - 루미 뷰티">
     <meta property="og:description" content="루미 뷰티의 뷰티 지식과 PMU 가이드: 립 블러싱, 브로우 PMU, 사후 관리, 자주 묻는 질문 및 뷰티 조언에 대한 팁.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/blogs.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/blogs.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="뷰티 지식 - 루미 뷰티">
     <meta name="twitter:description" content="루미 뷰티의 뷰티 지식과 PMU 가이드: 립 블러싱, 브로우 PMU, 사후 관리, 자주 묻는 질문 및 뷰티 조언에 대한 팁.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
 </head>
