--- a/ko/contact.html
+++ b/ko/contact.html
@@ -4,41 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>문의하기 - 루미 뷰티 | 다낭 반영구 시술</title>
     <meta name="description"
         content="루미 뷰티 다낭 문의 - 브로우, 입술, 아이라인 반영구 시술 전문. 전화: 0364759261. 주소: Vo Quy Huan, FPT City Urban Area, Da Nang.">
-    <meta name="keywords"
-        content="루미 뷰티 문의, 다낭 반영구, 루미 뷰티 다낭, 반영구 주소, 다낭 반영구 스튜디오">
+    <meta name="keywords" content="루미 뷰티 문의, 다낭 반영구, 루미 뷰티 다낭, 반영구 주소, 다낭 반영구 스튜디오">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/ko/contact.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/contact.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/contact.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/contact.html">
-    <link rel="alternate" hreflang="x-default" data-hreflang="x-default" href="https://lumibeauty.studio/vi/contact.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/ko/contact.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/contact.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/contact.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/contact.html">
+    <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
+        href="https://moinam.lumibeauty.studio/vi/contact.html">
     <meta property="og:type" content="website">
-    <meta property="og:title"
-        content="문의하기 - 루미 뷰티 | 다낭 반영구 시술">
+    <meta property="og:title" content="문의하기 - 루미 뷰티 | 다낭 반영구 시술">
     <meta property="og:description"
         content="루미 뷰티 다낭 문의 - 브로우, 입술, 아이라인 반영구 시술 전문. 전화: 0364759261. 주소: Vo Quy Huan, FPT City Urban Area, Da Nang.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/contact.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/contact.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title"
-        content="문의하기 - 루미 뷰티 | 다낭 반영구 시술">
-    <meta name="twitter:description"
-        content="루미 뷰티 다낭 문의 - 브로우, 입술, 아이라인 반영구 시술 전문. 전화: 0364759261.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:title" content="문의하기 - 루미 뷰티 | 다낭 반영구 시술">
+    <meta name="twitter:description" content="루미 뷰티 다낭 문의 - 브로우, 입술, 아이라인 반영구 시술 전문. 전화: 0364759261.">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,9 +87,9 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Lumi Beauty",
-      "image": "https://lumibeauty.studio/images/lumi-preview-image.jpg",
-      "@id": "https://lumibeauty.studio",
-      "url": "https://lumibeauty.studio",
+      "image": "https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg",
+      "@id": "https://moinam.lumibeauty.studio",
+      "url": "https://moinam.lumibeauty.studio",
       "telephone": "0364759261",
       "priceRange": "$$",
       "address": {
@@ -163,8 +162,7 @@
                             <h3>전화하기</h3>
                         </div>
                         <p>탭하여 루미 뷰티와 즉시 연결</p>
-                        <a href="tel:0364759261" class="btn btn-primary btn-full"
-                           >지금 전화하기</a>
+                        <a href="tel:0364759261" class="btn btn-primary btn-full">지금 전화하기</a>
                     </article>
                     <article class="contact-card">
                         <div class="contact-card-header">
@@ -197,8 +195,7 @@
                             <h3>이메일 보내기</h3>
                         </div>
                         <p>자세한 메시지를 남겨주세요 — 24시간 내에 답변드립니다</p>
-                        <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full"
-                           >이메일 보내기</a>
+                        <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full">이메일 보내기</a>
                     </article>
                 </div>
             </div>
@@ -208,20 +205,17 @@
     <!-- Location Section -->
     <section style="background: #ffffff; padding: 30px 0;">
         <div class="container">
-            <h2 class="section-title" style="margin-bottom: 48px; color: #163535; text-align: center;"
-               >루미 뷰티 주소</h2>
+            <h2 class="section-title" style="margin-bottom: 48px; color: #163535; text-align: center;">루미 뷰티 주소</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: start;"
                 class="contact-location-grid">
                 <div>
-                    <h3 style="font-size: 24px; margin-bottom: 32px; color: #163535; font-weight: 600;"
-                       >연락처 정보</h3>
+                    <h3 style="font-size: 24px; margin-bottom: 32px; color: #163535; font-weight: 600;">연락처 정보</h3>
                     <div style="margin-bottom: 32px;">
                         <p
                             style="font-size: 18px; font-weight: 600; margin-bottom: 12px; color: #163535; display: flex; align-items: center; gap: 8px;">
                             <span>📍</span> <span>주소:</span>
                         </p>
-                        <p style="font-size: 16px; line-height: 1.8; color: #2a4c4b; padding-left: 32px;"
-                           >
+                        <p style="font-size: 16px; line-height: 1.8; color: #2a4c4b; padding-left: 32px;">
                             Võ Quý Huân, Khu Đô Thị FPT City<br>
                             Đà Nẵng, Việt Nam
                         </p>
@@ -253,15 +247,13 @@
                             style="font-size: 18px; font-weight: 600; margin-bottom: 12px; color: #163535; display: flex; align-items: center; gap: 8px;">
                             <span>🕐</span> <span>운영 시간:</span>
                         </p>
-                        <p style="font-size: 16px; line-height: 1.8; color: #2a4c4b; padding-left: 32px;"
-                           >
+                        <p style="font-size: 16px; line-height: 1.8; color: #2a4c4b; padding-left: 32px;">
                             Thứ 2 - Chủ nhật: 9:00 - 18:00
                         </p>
                     </div>
                 </div>
                 <div>
-                    <h3 style="font-size: 24px; margin-bottom: 24px; color: #163535; font-weight: 600;"
-                       >지도</h3>
+                    <h3 style="font-size: 24px; margin-bottom: 24px; color: #163535; font-weight: 600;">지도</h3>
                     <div class="fanpage-embed"
                         style="border-radius: 12px; overflow: hidden; box-shadow: 0 8px 16px rgba(0,0,0,0.1);">
                         <iframe title="Lumi Beauty Google Maps"
@@ -282,13 +274,11 @@
             <img src="../icons/zalo.svg" alt="" aria-hidden="true" loading="lazy" decoding="async">
         </a>
         <a href="https://www.facebook.com/lumibeautypmubrowlip" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="Chat Facebook"
-           >
+            rel="noreferrer" aria-label="Chat Facebook">
             <img src="../icons/facebook.svg" alt="" aria-hidden="true" loading="lazy" decoding="async">
         </a>
         <a href="https://www.tiktok.com/@lumibeautyphunxam" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="TikTok"
-           >
+            rel="noreferrer" aria-label="TikTok">
             <img src="../icons/tiktok.svg" alt="" aria-hidden="true" loading="lazy" decoding="async">
         </a>
     </div>
@@ -300,8 +290,7 @@
     <div class="modal" id="bookingModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="bookingModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="bookingModalTitle">예약하기</h2>
                 <p>정보를 입력해 주세요. 곧 루미 뷰티에서 연락드립니다.</p>
@@ -310,13 +299,12 @@
                 <input type="hidden" name="form-name" value="booking-modal">
                 <div class="form-group">
                     <label for="bookingName">성함</label>
-                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required
-                       >
+                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required>
                 </div>
                 <div class="form-group">
                     <label for="bookingPhone">전화번호</label>
-                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832" required
-                       >
+                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832"
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="bookingService">관심 서비스</label>
@@ -334,8 +322,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bookingNotes">추가 메모</label>
-                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"
-                       ></textarea>
+                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"></textarea>
                 </div>
                 <div class="form-footer">
                     <button class="btn btn-primary btn-full" type="submit">요청
@@ -350,8 +337,7 @@
     <div class="modal" id="zaloContactModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="zaloModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="zaloModalTitle">직접 문의하기</h2>
                 <p data-zalo-service-desc>{service}에 관심이 있으시군요. 자세한 상담을 위해
@@ -361,8 +347,7 @@
                 <div style="margin-bottom: 32px;">
                     <img src="../icons/zalo.svg" alt="Zalo"
                         style="width: 80px; height: 80px; margin: 0 auto 24px; display: block;">
-                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;"
-                       >Zalo 전화번호:</p>
+                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;">Zalo 전화번호:</p>
                     <p style="font-size: 24px; font-weight: 700; color: #0068ff; margin-bottom: 24px;">0364759261</p>
                 </div>
                 <div style="display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;">
