--- a/ko/feedback.html
+++ b/ko/feedback.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>고객 후기 - 루미 뷰티 | 다낭 반영구 시술</title>
     <meta name="description" content="루미 뷰티 다낭 고객들의 실제 후기와 리뷰 - PMU 경험과 결과.">
     <meta name="keywords" content="루미 뷰티 후기, 고객 리뷰, 다낭 PMU 리뷰, 루미 뷰티 다낭">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/ko/feedback.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/feedback.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/feedback.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/feedback.html">
-    <link rel="alternate" hreflang="x-default" data-hreflang="x-default" href="https://lumibeauty.studio/vi/feedback.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/ko/feedback.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/feedback.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/feedback.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/feedback.html">
+    <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
+        href="https://moinam.lumibeauty.studio/vi/feedback.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="고객 후기 - 루미 뷰티">
     <meta property="og:description" content="루미 뷰티 다낭 고객들의 실제 후기와 리뷰 - PMU 경험과 결과.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/feedback.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/feedback.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="고객 후기 - 루미 뷰티">
     <meta name="twitter:description" content="루미 뷰티 다낭 고객들의 실제 후기와 리뷰 - PMU 경험과 결과.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body class="gallery-page">
     <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
-    
+
     <!-- Feedback Page Header -->
     <header class="gallery-page__header">
         <div class="container">
@@ -50,12 +55,24 @@
     <main class="gallery-page__main">
         <div class="container">
             <div class="gallery-grid" data-gallery>
-                <div class="gallery-item"><img src="../images/feedback/z7219329853136_1e28ab72cb2a2b6355415e89b208f5a2.jpg" alt="Đánh giá khách hàng 1"></div>
-                <div class="gallery-item"><img src="../images/feedback/z7219329880841_6b135349531629de56e18f7324b63961.jpg" alt="Đánh giá khách hàng 2"></div>
-                <div class="gallery-item"><img src="../images/feedback/z7219329902122_16f7160bde832aeebab61b5d039ca8cf.jpg" alt="Đánh giá khách hàng 3"></div>
-                <div class="gallery-item"><img src="../images/feedback/z7219329951126_c08d26064c830ea5e6ec526954e27369.jpg" alt="Đánh giá khách hàng 4"></div>
-                <div class="gallery-item"><img src="../images/feedback/z7219329981462_c2ab839a60b598d755f1337e0c4fea8f.jpg" alt="Đánh giá khách hàng 5"></div>
-                <div class="gallery-item"><img src="../images/feedback/z7219330014288_47f0d63cfea2eb7a1f2f50985dfa13b2.jpg" alt="Đánh giá khách hàng 6"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219329853136_1e28ab72cb2a2b6355415e89b208f5a2.jpg"
+                        alt="Đánh giá khách hàng 1"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219329880841_6b135349531629de56e18f7324b63961.jpg"
+                        alt="Đánh giá khách hàng 2"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219329902122_16f7160bde832aeebab61b5d039ca8cf.jpg"
+                        alt="Đánh giá khách hàng 3"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219329951126_c08d26064c830ea5e6ec526954e27369.jpg"
+                        alt="Đánh giá khách hàng 4"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219329981462_c2ab839a60b598d755f1337e0c4fea8f.jpg"
+                        alt="Đánh giá khách hàng 5"></div>
+                <div class="gallery-item"><img
+                        src="../images/feedback/z7219330014288_47f0d63cfea2eb7a1f2f50985dfa13b2.jpg"
+                        alt="Đánh giá khách hàng 6"></div>
             </div>
         </div>
     </main>
@@ -70,4 +87,5 @@
     <!-- GA4 Events Tracking -->
     <script src="/js/ga4-events.js" defer></script>
 </body>
+
 </html>
