--- a/ko/services/phun-moi-collagen.html
+++ b/ko/services/phun-moi-collagen.html
@@ -4,41 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>루미 뷰티 콜라겐 립 블러싱 – 다낭 의료 표준 기법</title>
     <meta name="description"
         content="루미 뷰티 다낭 콜라겐 립 블러싱: 의료 표준 기법, 1:1 전문가 7년 이상 경력, 색상 18-36개월 지속, 빠른 회복 1-2일. 유기농 색소 수입, 4개월 보증.">
     <meta name="keywords"
         content="phun môi collagen, phun môi đà nẵng, phun môi collagen đà nẵng, lumi beauty, spa phun môi, phun môi collagen lumi beauty, phun môi 1-1 đà nẵng">
     <meta name="theme-color" content="#f3b1c5">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/ko/services/phun-moi-collagen.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/services/phun-moi-collagen.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/services/phun-moi-collagen.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/services/phun-moi-collagen.html">
-    <link rel="alternate" hreflang="x-default" data-hreflang="x-default" href="https://lumibeauty.studio/vi/services/phun-moi-collagen.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/ko/services/phun-moi-collagen.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi"
+        href="https://moinam.lumibeauty.studio/vi/services/phun-moi-collagen.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en"
+        href="https://moinam.lumibeauty.studio/en/services/phun-moi-collagen.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko"
+        href="https://moinam.lumibeauty.studio/ko/services/phun-moi-collagen.html">
+    <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
+        href="https://moinam.lumibeauty.studio/vi/services/phun-moi-collagen.html">
     <meta property="og:type" content="website">
-    <meta property="og:title"
-        content="루미 뷰티 콜라겐 립 블러싱 – 다낭 의료 표준 기법">
+    <meta property="og:title" content="루미 뷰티 콜라겐 립 블러싱 – 다낭 의료 표준 기법">
     <meta property="og:description"
         content="루미 뷰티 다낭 콜라겐 립 블러싱: 의료 표준 기법, 1:1 전문가 7년 이상 경력, 색상 18-36개월 지속, 빠른 회복 1-2일. 유기농 색소 수입, 4개월 보증.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/ko/services/phun-moi-collagen.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/ko/services/phun-moi-collagen.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title"
-        content="루미 뷰티 콜라겐 립 블러싱 – 다낭 의료 표준 기법">
+    <meta name="twitter:title" content="루미 뷰티 콜라겐 립 블러싱 – 다낭 의료 표준 기법">
     <meta name="twitter:description"
         content="루미 뷰티 다낭 콜라겐 립 블러싱: 의료 표준 기법, 1:1 전문가 7년 이상 경력, 색상 18-36개월 지속, 빠른 회복 1-2일. 유기농 색소 수입, 4개월 보증.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,7 +54,7 @@
 </head>
 
 <body class="service-detail service-detail--lip">
-        <!-- Header Placeholder -->
+    <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
 
     <main>
@@ -68,8 +72,7 @@
                             <li>색상 18–36개월 지속, 정확한 색상 발현 및 번짐 없음</li>
                         </ul>
                         <div class="service-hero-actions">
-                            <button class="btn btn-primary btn-large"
-                                data-action="open-booking">예약하기</button>
+                            <button class="btn btn-primary btn-large" data-action="open-booking">예약하기</button>
                             <a class="btn btn-outline btn-outline-arrow" href="https://zalo.me/84364759261"
                                 target="_blank" rel="noreferrer noopener">
                                 <span>Zalo 열기</span>
@@ -114,8 +117,7 @@
                     <article class="problem-card">
                         <div class="problem-image">
                             <img src="../../images/services/phun-moi/van-de-cua-moi/moi-lech.jpg"
-                                alt="Môi lệch, viền môi không cân xứng"
-                               >
+                                alt="Môi lệch, viền môi không cân xứng">
                         </div>
                         <h3>비대칭 입술, 불균형 립 라인</h3>
                         <p>양쪽이 고르지 않은 입술로 미소가 조화롭지 않고 대화 시 자신감이 떨어집니다.</p>
@@ -123,8 +125,7 @@
                     <article class="problem-card">
                         <div class="problem-image">
                             <img src="../../images/services/phun-moi/van-de-cua-moi/moi-xuong-tone.jpg"
-                                alt="Môi xuống tông theo thời gian"
-                               >
+                                alt="Môi xuống tông theo thời gian">
                         </div>
                         <h3>시간이 지나면서 톤이 어두워지는 입술</h3>
                         <p>케어를 잘 해도 입술 색상이 시간이 지나면서 바래고 생기를 잃어 장기적인 해결책이 필요합니다.</p>
@@ -137,8 +138,8 @@
             <div class="container">
                 <div class="why-choose-inner">
                     <div class="why-choose-media">
-                        <img src="../../images/khong-gian-phun-moi-tai-lumi.JPG" alt="Phun Môi Collagen tại Lumi Beauty"
-                           >
+                        <img src="../../images/khong-gian-phun-moi-tai-lumi.JPG"
+                            alt="Phun Môi Collagen tại Lumi Beauty">
                     </div>
                     <div class="why-choose-content">
                         <h2 class="section-title">왜 많은 고객이 루미 뷰티에서 립 블러싱을 선택할까요?</h2>
@@ -356,43 +357,37 @@
                     <article class="before-after-item" data-lightbox-image="0">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003580676_5d962342eb5331530189bfda032c032c.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                     <article class="before-after-item" data-lightbox-image="1">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003573959_17ec7ca127445763a19ac555d187828d.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                     <article class="before-after-item" data-lightbox-image="2">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003573501_114ebf99177b8c2d048b0493114a79e3.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                     <article class="before-after-item" data-lightbox-image="3">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003539268_609359d6a94d99729f6498b07706d233.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                     <article class="before-after-item" data-lightbox-image="4">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003562326_165e330d05857402b16c4292abac1aba.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                     <article class="before-after-item" data-lightbox-image="5">
                         <div class="before-after-image">
                             <img src="../../images/services/phun-moi/hinh-truoc-sau/z7235003542280_0d48b83ca0db7c3d85a71941ccc7c9db.jpg"
-                                alt="Kết quả phun môi trước và sau"
-                               >
+                                alt="Kết quả phun môi trước và sau">
                         </div>
                     </article>
                 </div>
@@ -418,8 +413,7 @@
                             <li>100% 유기농 수입 색소, 납 없음, 모든 유형의 입술에 안전</li>
                         </ul>
                         <div class="pricing-button">
-                            <button class="btn btn-primary btn-full"
-                                data-action="open-booking">무료 상담</button>
+                            <button class="btn btn-primary btn-full" data-action="open-booking">무료 상담</button>
                         </div>
                     </article>
                 </div>
@@ -471,8 +465,7 @@
                     <h2>생기 있는 입술 색상을 갖고 싶으신가요?</h2>
                     <p>오늘 바로 예약하고 루미 뷰티에서 색상 톤 측정 및 개인 맞춤 케어 프로토콜을 받아보세요.</p>
                     <div class="cta-actions">
-                        <button class="btn btn-primary btn-large"
-                            data-action="open-booking">예약하기</button>
+                        <button class="btn btn-primary btn-large" data-action="open-booking">예약하기</button>
                         <a class="btn btn-outline" href="tel:0364759261">0364759261</a>
                     </div>
                 </div>
@@ -492,8 +485,7 @@
                                 <h3>전화하기</h3>
                             </div>
                             <p>탭하여 루미 뷰티와 즉시 연결</p>
-                            <a href="tel:0364759261" class="btn btn-primary btn-full"
-                               >지금 전화하기</a>
+                            <a href="tel:0364759261" class="btn btn-primary btn-full">지금 전화하기</a>
                         </article>
                         <article class="contact-card">
                             <div class="contact-card-header">
@@ -525,8 +517,7 @@
                                 <h3>이메일 보내기</h3>
                             </div>
                             <p>자세한 메시지를 남겨주세요 — 24시간 내에 답변드립니다</p>
-                            <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full"
-                               >이메일 보내기</a>
+                            <a href="mailto:nvduc2910@gmail.com" class="btn btn-outline btn-full">이메일 보내기</a>
                         </article>
                     </div>
                 </div>
@@ -540,25 +531,22 @@
             <img src="../../icons/zalo.svg" alt="" aria-hidden="true">
         </a>
         <a href="https://www.facebook.com/lumibeautypmubrowlip" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="Facebook으로 채팅하기"
-           >
+            rel="noreferrer" aria-label="Facebook으로 채팅하기">
             <img src="../../icons/facebook.svg" alt="" aria-hidden="true">
         </a>
         <a href="https://www.tiktok.com/@lumibeautyphunxam" class="floating-contact__item" target="_blank"
-            rel="noreferrer" aria-label="TikTok"
-           >
+            rel="noreferrer" aria-label="TikTok">
             <img src="../../icons/tiktok.svg" alt="" aria-hidden="true">
         </a>
     </div>
 
-        <!-- Footer Placeholder -->
+    <!-- Footer Placeholder -->
     <div id="footer-placeholder"></div>
 
     <div class="modal" id="bookingModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="bookingModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="bookingModalTitle">예약하기</h2>
                 <p>정보를 입력해 주세요. 곧 루미 뷰티에서 연락드립니다.</p>
@@ -567,13 +555,12 @@
                 <input type="hidden" name="form-name" value="booking-modal">
                 <div class="form-group">
                     <label for="bookingName">성함</label>
-                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required
-                       >
+                    <input id="bookingName" name="name" type="text" placeholder="Nguyen Thi Anh" required>
                 </div>
                 <div class="form-group">
                     <label for="bookingPhone">전화번호</label>
-                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832" required
-                       >
+                    <input id="bookingPhone" name="phone" type="tel" inputmode="tel" placeholder="0900 067 832"
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="bookingService">관심 서비스</label>
@@ -591,8 +578,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bookingNotes">추가 메모</label>
-                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"
-                       ></textarea>
+                    <textarea id="bookingNotes" name="notes" rows="3" placeholder="필요 사항이나 질문을 작성해주세요"></textarea>
                 </div>
                 <div class="form-footer">
                     <button class="btn btn-primary btn-full" type="submit">요청
@@ -620,8 +606,7 @@
     <div class="modal" id="zaloContactModal" aria-hidden="true">
         <div class="modal-backdrop" data-modal-close></div>
         <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="zaloModalTitle">
-            <button class="modal-close" type="button" aria-label="닫기" data-modal-close
-               >&times;</button>
+            <button class="modal-close" type="button" aria-label="닫기" data-modal-close>&times;</button>
             <div class="modal-header">
                 <h2 id="zaloModalTitle">직접 문의하기</h2>
                 <p data-zalo-service-desc>관심 있는 서비스에 대해 Zalo로 문의해주세요.</p>
@@ -630,8 +615,7 @@
                 <div style="margin-bottom: 32px;">
                     <img src="../../icons/zalo.svg" alt="Zalo"
                         style="width: 80px; height: 80px; margin: 0 auto 24px; display: block;">
-                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;"
-                       >Zalo 전화번호:</p>
+                    <p style="font-size: 18px; font-weight: 600; margin-bottom: 8px;">Zalo 전화번호:</p>
                     <p style="font-size: 24px; font-weight: 700; color: #0068ff; margin-bottom: 24px;">0364759261</p>
                 </div>
                 <div style="display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;">
