--- a/vi/contact.html
+++ b/vi/contact.html
@@ -4,40 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>Liên Hệ - Lumi Beauty | Phun Xăm Thẩm Mỹ Đà Nẵng</title>
     <meta name="description"
         content="Liên hệ Lumi Beauty Đà Nẵng - Chuyên phun xăm thẩm mỹ mày, môi, mí. Hotline: 0364759261. Địa chỉ: Võ Quý Huân, Khu Đô Thị FPT City, Đà Nẵng.">
     <meta name="keywords"
         content="liên hệ lumi beauty, phun xăm đà nẵng, lumi beauty đà nẵng, địa chỉ phun xăm, spa phun xăm đà nẵng">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/vi/contact.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/contact.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/contact.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/contact.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/vi/contact.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/contact.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/contact.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/contact.html">
     <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
-        href="https://lumibeauty.studio/vi/contact.html">
+        href="https://moinam.lumibeauty.studio/vi/contact.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Liên Hệ - Lumi Beauty | Phun Xăm Thẩm Mỹ Đà Nẵng">
     <meta property="og:description"
         content="Liên hệ Lumi Beauty Đà Nẵng - Chuyên phun xăm thẩm mỹ mày, môi, mí. Hotline: 0364759261. Địa chỉ: Võ Quý Huân, Khu Đô Thị FPT City, Đà Nẵng.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/vi/contact.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/vi/contact.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Liên Hệ - Lumi Beauty | Phun Xăm Thẩm Mỹ Đà Nẵng">
     <meta name="twitter:description"
         content="Liên hệ Lumi Beauty Đà Nẵng - Chuyên phun xăm thẩm mỹ mày, môi, mí. Hotline: 0364759261.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,9 +89,9 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Lumi Beauty",
-      "image": "https://lumibeauty.studio/images/lumi-preview-image.jpg",
-      "@id": "https://lumibeauty.studio",
-      "url": "https://lumibeauty.studio",
+      "image": "https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg",
+      "@id": "https://moinam.lumibeauty.studio",
+      "url": "https://moinam.lumibeauty.studio",
       "telephone": "0364759261",
       "priceRange": "$$",
       "address": {
