--- a/vi/feedback.html
+++ b/vi/feedback.html
@@ -4,40 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="_VoMZMIhZO5ON6okFYg9jCzi1WCfyygHJ8-RIP9G75I" />
+
     <title>Feedback Khách Hàng - Lumi Beauty | Phun Xăm Thẩm Mỹ Đà Nẵng</title>
     <meta name="description"
         content="Feedback và đánh giá thực tế từ khách hàng Lumi Beauty Đà Nẵng - Những trải nghiệm và kết quả phun xăm thẩm mỹ.">
     <meta name="keywords"
         content="feedback lumi beauty, đánh giá khách hàng, review phun xăm đà nẵng, lumi beauty đà nẵng">
     <meta name="theme-color" content="#88c0c4">
-    <link rel="canonical" id="canonicalLink" href="https://lumibeauty.studio/vi/feedback.html">
-    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://lumibeauty.studio/vi/feedback.html">
-    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://lumibeauty.studio/en/feedback.html">
-    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://lumibeauty.studio/ko/feedback.html">
+    <link rel="canonical" id="canonicalLink" href="https://moinam.lumibeauty.studio/vi/feedback.html">
+    <link rel="alternate" hreflang="vi" data-hreflang="vi" href="https://moinam.lumibeauty.studio/vi/feedback.html">
+    <link rel="alternate" hreflang="en" data-hreflang="en" href="https://moinam.lumibeauty.studio/en/feedback.html">
+    <link rel="alternate" hreflang="ko" data-hreflang="ko" href="https://moinam.lumibeauty.studio/ko/feedback.html">
     <link rel="alternate" hreflang="x-default" data-hreflang="x-default"
-        href="https://lumibeauty.studio/vi/feedback.html">
+        href="https://moinam.lumibeauty.studio/vi/feedback.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Feedback Khách Hàng - Lumi Beauty">
     <meta property="og:description"
         content="Feedback và đánh giá thực tế từ khách hàng Lumi Beauty Đà Nẵng - Những trải nghiệm và kết quả phun xăm thẩm mỹ.">
-    <meta property="og:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
-    <meta property="og:url" content="https://lumibeauty.studio/vi/feedback.html">
+    <meta property="og:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta property="og:url" content="https://moinam.lumibeauty.studio/vi/feedback.html">
     <meta property="og:site_name" content="Lumi Beauty">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Feedback Khách Hàng - Lumi Beauty">
     <meta name="twitter:description"
         content="Feedback và đánh giá thực tế từ khách hàng Lumi Beauty Đà Nẵng - Những trải nghiệm và kết quả phun xăm thẩm mỹ.">
-    <meta name="twitter:image" content="https://lumibeauty.studio/images/lumi-preview-image.jpg">
+    <meta name="twitter:image" content="https://moinam.lumibeauty.studio/images/lumi-preview-image.jpg">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYDWGCR68B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61GYBJ33R0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SYDWGCR68B');
+        gtag('config', 'G-61GYBJ33R0');
     </script>
     <link rel="stylesheet" href="../styles.css">
 </head>
